--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.0.0",
-    "axios": "^0.18.1",
+    "axios": "^0.18.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.4",
     "mobx-react-router": "^4.0.7",
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "PORT=3001 react-app-rewired start",
+    "start-windows": "SET PORT=3001 && react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
